--- a/notebook_idata_lesson01/numpy/numpy_01.ipynb
+++ b/notebook_idata_lesson01/numpy/numpy_01.ipynb
@@ -2,36 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n",
-      "[['Year' 'WHO region' 'Country' 'Beverage Types' 'Display Value']\n",
-      " ['1986' 'Western Pacific' 'Viet Nam' 'Wine' '0']\n",
-      " ['1986' 'Americas' 'Uruguay' 'Other' '0.5']\n",
-      " ..., \n",
-      " ['1987' 'Africa' 'Malawi' 'Other' '0.75']\n",
-      " ['1989' 'Americas' 'Bahamas' 'Wine' '1.5']\n",
-      " ['1985' 'Africa' 'Malawi' 'Spirits' '0.31']]\n"
+      "<class 'numpy.ndarray'>\n[['Year' 'WHO region' 'Country' 'Beverage Types' 'Display Value']\n ['1986' 'Western Pacific' 'Viet Nam' 'Wine' '0']\n ['1986' 'Americas' 'Uruguay' 'Other' '0.5']\n ..., \n ['1987' 'Africa' 'Malawi' 'Other' '0.75']\n ['1989' 'Americas' 'Bahamas' 'Wine' '1.5']\n ['1985' 'Africa' 'Malawi' 'Spirits' '0.31']]\n"
      ]
     }
    ],
    "source": [
     "import numpy\n",
     "\n",
-    "world_alcohol = numpy.genfromtxt(\"world_alcohol.txt\",delimiter=\",\",dtype=str)\n",
+    "world_alcohol = numpy.genfromtxt(\"E:\\Workspace\\jupyter_notebook\\\\notebook_idata_lesson01\\\\numpy\\world_alcohol.txt\",\n",
+    "                                 delimiter=\",\", dtype=str)\n",
     "print(type(world_alcohol))\n",
     "print(world_alcohol)\n",
-    "# print(help(numpy.genfromtxt))"
+    "# print(help(numpy.genfromtxt))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -43,27 +37,18 @@
     }
    ],
    "source": [
-    "vector = numpy.array([5,10,15,20])\n",
-    "print(vector)"
+    "vector = numpy.array([5, 10, 15, 20])\n",
+    "print(vector)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 5 10 15]\n",
-      " [20 25 30]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "matrix = numpy.array([[5,10,15],[20,25,30]])\n",
-    "print(matrix)"
+    "matrix = numpy.array([[5, 10, 15], [20, 25, 30]])\n",
+    "print(matrix)\n"
    ]
   },
   {
@@ -82,7 +67,8 @@
    ],
    "source": [
     "print(vector.shape)\n",
-    "print(matrix.shape)"
+    "\n",
+    "print(matrix.shape)\n"
    ]
   },
   {
