--- a/notebook_idata_lesson01/numpy/numpy_02.ipynb
+++ b/notebook_idata_lesson01/numpy/numpy_02.ipynb
@@ -2,64 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3 4]\n",
-      "int32\n"
+      "[1 2 3 4]\nint32\n"
      ]
     }
    ],
    "source": [
     "import numpy\n",
     "\n",
-    "numbers = numpy.array([1,2,3,4])\n",
+    "numbers = numpy.array([1, 2, 3, 4])\n",
     "print(numbers)\n",
-    "print(numbers.dtype)"
+    "print(numbers.dtype)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.  2.  3.  4.]\n",
-      "float64\n"
+      "[ 1.  2.  3.  4.]\nfloat64\n"
      ]
     }
    ],
    "source": [
-    "numbers = numpy.array([1,2,3,4.0])\n",
+    "numbers = numpy.array([1, 2, 3, 4.0])\n",
     "print(numbers)\n",
-    "print(numbers.dtype)"
+    "print(numbers.dtype)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1' '2' '3' '4']\n",
-      "<U11\n"
-     ]
+     "ename": "NameError",
+     "evalue": "name 'numpy' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-db1218fca7c2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnumbers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'4'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'numpy' is not defined"
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
-    "numbers = numpy.array([1,2,3,'4'])\n",
+    "numbers = numpy.array([1, 2, 3, '4'])\n",
     "print(numbers)\n",
-    "print(numbers.dtype)"
+    "print(numbers.dtype)\n"
    ]
   },
   {
@@ -82,8 +83,8 @@
     }
    ],
    "source": [
-    "world_alcohol = numpy.genfromtxt(\"world_alcohol.txt\",delimiter=\",\",dtype=str,skip_header=1)\n",
-    "print(world_alcohol)"
+    "world_alcohol = numpy.genfromtxt(\"world_alcohol.txt\", delimiter=\",\", dtype=str, skip_header=1)\n",
+    "print(world_alcohol)\n"
    ]
   },
   {
