--- a/notebook_idata_lesson01/numpy/numpy_03.ipynb
+++ b/notebook_idata_lesson01/numpy/numpy_03.ipynb
@@ -2,10 +2,167 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "import numpy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 与\n",
+    "vector = numpy.array([5, 10, 15, 20])\n",
+    "equal_to_ten_and_five = (vector == 10) & (vector == 5)\n",
+    "print(equal_to_ten_and_five)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 或\n",
+    "vector = numpy.array([5, 10, 15, 20])\n",
+    "equal_to_ten_or_five = (vector == 10) | (vector == 5)\n",
+    "print(equal_to_ten_or_five)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50 50 15 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 或\n",
+    "vector = numpy.array([5, 10, 15, 20])\n",
+    "equal_to_ten_or_five = (vector == 10) | (vector == 5)\n",
+    "vector[equal_to_ten_or_five] = 50\n",
+    "print(vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U1\n['1' '2' '3']\nfloat64\n[ 1.  2.  3.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 数据类型转换\n",
+    "vector = numpy.array([\"1\", \"2\", \"3\"])\n",
+    "print(vector.dtype)\n",
+    "print(vector)\n",
+    "vector = vector.astype(float)\n",
+    "print(vector.dtype)\n",
+    "print(vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# vector求和\n",
+    "vector = numpy.array([5, 10, 15, 20])\n",
+    "vector.sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "225"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matrix求和\n",
+    "matrix = numpy.array([[5, 10, 15, ], [20, 25, 30], [35, 40, 45]])\n",
+    "matrix.sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[60 75 90]\n[ 30  75 120]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# matrix每列或者每行单独求和\n",
+    "matrix = numpy.array([[5, 10, 15, ], [20, 25, 30], [35, 40, 45]])\n",
+    "print(matrix.sum(axis=0))\n",
+    "print(matrix.sum(axis=1))  # 行\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
