--- a/notebook_idata_lesson01/demo/2-数据分析处理库pandas/pandas_6.ipynb
+++ b/notebook_idata_lesson01/demo/2-数据分析处理库pandas/pandas_6.ipynb
@@ -107,10 +107,9 @@
     }
    ],
    "source": [
-    "\n",
     "# 对Series进行计算\n",
     "series_custom *= 10\n",
-    "print(series_custom[:3])"
+    "print(series_custom[:3])\n"
    ]
   },
   {
