--- a/notebook_idata_lesson01/demo/梯度下降求解逻辑回归/梯度下降/梯度下降求解逻辑回归.ipynb
+++ b/notebook_idata_lesson01/demo/梯度下降求解逻辑回归/梯度下降/梯度下降求解逻辑回归.ipynb
@@ -34,8 +34,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:41:59.715000",
      "start_time": "2016-09-12T22:41:52.726000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -53,8 +52,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:43:37.650000",
      "start_time": "2016-09-12T22:43:37.635000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -146,8 +144,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:41:59.785000",
      "start_time": "2016-09-12T22:41:59.776000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -172,8 +169,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.260000",
      "start_time": "2016-09-12T22:41:59.790000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -257,8 +253,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.268000",
      "start_time": "2016-09-12T22:42:00.263000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -273,8 +268,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.574000",
      "start_time": "2016-09-12T22:42:00.270000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -322,8 +316,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.581000",
      "start_time": "2016-09-12T22:42:00.576000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -352,8 +345,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.649000",
      "start_time": "2016-09-12T22:42:00.586000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -376,9 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -402,9 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -428,9 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -454,8 +440,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.683000",
      "start_time": "2016-09-12T22:42:00.652000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -496,8 +481,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.712000",
      "start_time": "2016-09-12T22:42:00.686000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -514,8 +498,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.743000",
      "start_time": "2016-09-12T22:42:00.714000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -552,8 +535,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.769000",
      "start_time": "2016-09-12T22:42:00.747000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -588,8 +570,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.830000",
      "start_time": "2016-09-12T22:42:00.804000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -611,8 +592,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.858000",
      "start_time": "2016-09-12T22:42:00.833000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -634,8 +614,7 @@
      "end_time": "2016-09-12T22:42:00.918000",
      "start_time": "2016-09-12T22:42:00.862000"
     },
-    "cell_style": "center",
-    "collapsed": false
+    "cell_style": "center"
    },
    "outputs": [],
    "source": [
@@ -677,8 +656,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:00.951000",
      "start_time": "2016-09-12T22:42:00.922000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -726,8 +704,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:02.222000",
      "start_time": "2016-09-12T22:42:00.953000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -786,8 +763,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:23.816000",
      "start_time": "2016-09-12T22:42:02.225000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -844,8 +820,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:32.050000",
      "start_time": "2016-09-12T22:42:23.818000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -902,8 +877,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:32.786000",
      "start_time": "2016-09-12T22:42:32.052000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -953,8 +927,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:34.091000",
      "start_time": "2016-09-12T22:42:32.788000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1011,8 +984,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:36.331000",
      "start_time": "2016-09-12T22:42:34.094000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1063,8 +1035,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:40.439000",
      "start_time": "2016-09-12T22:42:36.333000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1120,8 +1091,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:52.663000",
      "start_time": "2016-09-12T22:42:40.442000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1171,8 +1141,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:58.954000",
      "start_time": "2016-09-12T22:42:52.665000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1212,8 +1181,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:59.693000",
      "start_time": "2016-09-12T22:42:58.957000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1263,8 +1231,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:59.703000",
      "start_time": "2016-09-12T22:42:59.699000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1280,8 +1247,7 @@
     "ExecuteTime": {
      "end_time": "2016-09-12T22:42:59.760000",
      "start_time": "2016-09-12T22:42:59.706000"
-    },
-    "collapsed": false
+    }
    },
    "outputs": [
     {
@@ -1319,7 +1285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   },
   "nav_menu": {},
   "toc": {
@@ -1340,5 +1306,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
