--- a/notebook_idata_lesson01/scikit-learn/scikit-learn02.ipynb
+++ b/notebook_idata_lesson01/scikit-learn/scikit-learn02.ipynb
@@ -277,6 +277,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6459627329192547\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 模型效果评估\n",
+    "admissions[\"predicted_label\"] = pre\n",
+    "admissions[\"actual_label\"] = admissions[\"admit\"]\n",
+    "# admissions[:5]\n",
+    "\n",
+    "matches = admissions[\"predicted_label\"] == admissions[\"actual_label\"]\n",
+    "correct_predictions = admissions[matches]\n",
+    "# 简单的计算精度\n",
+    "accuracy = len(correct_predictions) / float(len(admissions))\n",
+    "print(accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n385\n213\n15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 模型效果评估，TPR\n",
+    "true_positive_filter = (admissions[\"predicted_label\"] == 1) & (admissions[\"actual_label\"] == 1)\n",
+    "true_positives = len(admissions[true_positive_filter])\n",
+    "print(true_positives)\n",
+    "\n",
+    "true_negative_filter = (admissions[\"predicted_label\"] == 0) & (admissions[\"actual_label\"] == 0)\n",
+    "true_negatives = len(admissions[true_negative_filter])\n",
+    "print(true_negatives)\n",
+    "\n",
+    "false_negative_filter = (admissions[\"predicted_label\"] == 0) & (admissions[\"actual_label\"] == 1)\n",
+    "false_negatives = len(admissions[false_negative_filter])\n",
+    "print(false_negatives)\n",
+    "\n",
+    "false_positive_filter = (admissions[\"predicted_label\"] == 1) & (admissions[\"actual_label\"] == 0)\n",
+    "false_positives = len(admissions[false_positive_filter])\n",
+    "print(false_positives)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12704918032786885\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 计算TPR\n",
+    "sensitivity = true_positives / float(true_positives + false_negatives)\n",
+    "print(sensitivity)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9625\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 计算TNR\n",
+    "sensitivity = true_negatives / float(true_negatives + false_positives)\n",
+    "print(sensitivity)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
