--- a/notebook_idata_lesson01/Gensim/Gensim.ipynb
+++ b/notebook_idata_lesson01/Gensim/Gensim.ipynb
@@ -2,10 +2,327 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Coding\\Anaconda3\\envs\\idata\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gensim.models import word2vec\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['the', 'quick', 'brown', 'fox', 'jumps', 'over', 'the', 'lazy', 'dogs'], ['yoyoyo', 'you', 'go', 'home', 'now', 'to', 'sleep']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_sentences = [\"the quick brown fox jumps over the lazy dogs\", \"yoyoyo you go home now to sleep\"]\n",
+    "sentences = [s.split() for s in raw_sentences]\n",
+    "print(sentences)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,607 : INFO : collecting all words and their counts\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,609 : INFO : PROGRESS: at sentence #0, processed 0 words, keeping 0 word types\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,610 : INFO : collected 15 word types from a corpus of 16 raw words and 2 sentences\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,611 : INFO : Loading a fresh vocabulary\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,612 : INFO : min_count=1 retains 15 unique words (100% of original 15, drops 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,613 : INFO : min_count=1 leaves 16 word corpus (100% of original 16, drops 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,614 : INFO : deleting the raw counts dictionary of 15 items\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,616 : INFO : sample=0.001 downsamples 15 most-common words\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,617 : INFO : downsampling leaves estimated 2 word corpus (13.7% of prior 16)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,618 : INFO : estimated required memory for 15 words and 100 dimensions: 19500 bytes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,619 : INFO : resetting layer weights\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,621 : INFO : training model with 3 workers on 15 vocabulary and 100 features, using sg=0 hs=0 sample=0.001 negative=5 window=5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,629 : INFO : worker thread finished; awaiting finish of 2 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,631 : INFO : worker thread finished; awaiting finish of 1 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,632 : INFO : worker thread finished; awaiting finish of 0 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,633 : INFO : EPOCH - 1 : training on 16 raw words (2 effective words) took 0.0s, 417 effective words/s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,640 : INFO : worker thread finished; awaiting finish of 2 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,642 : INFO : worker thread finished; awaiting finish of 1 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,644 : INFO : worker thread finished; awaiting finish of 0 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,645 : INFO : EPOCH - 2 : training on 16 raw words (3 effective words) took 0.0s, 611 effective words/s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,673 : INFO : worker thread finished; awaiting finish of 2 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,679 : INFO : worker thread finished; awaiting finish of 1 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,684 : INFO : worker thread finished; awaiting finish of 0 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,690 : INFO : EPOCH - 3 : training on 16 raw words (1 effective words) took 0.0s, 61 effective words/s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,696 : INFO : worker thread finished; awaiting finish of 2 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,699 : INFO : worker thread finished; awaiting finish of 1 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,702 : INFO : worker thread finished; awaiting finish of 0 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,705 : INFO : EPOCH - 4 : training on 16 raw words (2 effective words) took 0.0s, 189 effective words/s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,710 : INFO : worker thread finished; awaiting finish of 2 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,711 : INFO : worker thread finished; awaiting finish of 1 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,712 : INFO : worker thread finished; awaiting finish of 0 more threads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,714 : INFO : EPOCH - 5 : training on 16 raw words (2 effective words) took 0.0s, 438 effective words/s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,715 : INFO : training on a 80 raw words (10 effective words) took 0.1s, 108 effective words/s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-09 16:26:14,717 : WARNING : under 10 jobs per worker: consider setting a smaller `batch_words' for smoother alpha decay\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 建模\n",
+    "# 参数min_count表示在语料中多少词频的词会被忽略\n",
+    "# 参数size，表示神经网络的层数，默认是100层\n",
+    "model = word2vec.Word2Vec(sentences, min_count=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Coding\\Anaconda3\\envs\\idata\\lib\\site-packages\\ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `similarity` (Method will be removed in 4.0.0, use self.wv.similarity() instead).\n  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.11395961437528385"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.similarity(\"dogs\", \"you\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
