--- a/notebook_idata_lesson01/kobe/kobe.ipynb
+++ b/notebook_idata_lesson01/kobe/kobe.ipynb
@@ -1567,6 +1567,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. ... 1. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier(n_estimators=best_n, max_depth=best_m)\n",
+    "model.fit(train_x, train_y)\n",
+    "pred = model.predict(train_x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
