--- a/notebook_idata_lesson01/Aquastat/Aquastat01.ipynb
+++ b/notebook_idata_lesson01/Aquastat/Aquastat01.ipynb
@@ -7,7 +7,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "\n",
+    "% matplotlib inline\n",
+    "% config InlineBackend.figure_format = 'retina'  # 设置图像清晰度\n"
+   ]
   }
  ],
  "metadata": {
