--- a/notebook_idata_lesson01/test/test.ipynb
+++ b/notebook_idata_lesson01/test/test.ipynb
@@ -6795,17 +6795,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 输出csv\n",
-    "df.to_csv(\"/Users/li/workspace/jupyter_notebook/notebook_idata_lesson01/test/data/test_data1.csv\")"
+    "df.to_csv(\n",
+    "    \"/Users/li/workspace/jupyter_notebook/notebook_idata_lesson01/test/data/test_data1.csv\",\n",
+    "    index=False\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -6829,7 +6832,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>age</th>\n",
        "      <th>job</th>\n",
        "      <th>marital</th>\n",
@@ -6839,6 +6841,7 @@
        "      <th>loan</th>\n",
        "      <th>contact</th>\n",
        "      <th>month</th>\n",
+       "      <th>day_of_week</th>\n",
        "      <th>...</th>\n",
        "      <th>campaign</th>\n",
        "      <th>pdays</th>\n",
@@ -6855,7 +6858,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>44</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -6865,6 +6867,7 @@
        "      <td>1</td>\n",
        "      <td>cellular</td>\n",
        "      <td>aug</td>\n",
+       "      <td>thu</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>999</td>\n",
@@ -6879,7 +6882,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>53</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -6889,6 +6891,7 @@
        "      <td>1</td>\n",
        "      <td>cellular</td>\n",
        "      <td>nov</td>\n",
+       "      <td>fri</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>999</td>\n",
@@ -6903,7 +6906,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>28</td>\n",
        "      <td>5</td>\n",
        "      <td>2</td>\n",
@@ -6913,6 +6915,7 @@
        "      <td>1</td>\n",
        "      <td>cellular</td>\n",
        "      <td>jun</td>\n",
+       "      <td>thu</td>\n",
        "      <td>...</td>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
@@ -6927,7 +6930,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>39</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
@@ -6937,6 +6939,7 @@
        "      <td>1</td>\n",
        "      <td>cellular</td>\n",
        "      <td>apr</td>\n",
+       "      <td>fri</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
        "      <td>999</td>\n",
@@ -6951,7 +6954,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>55</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
@@ -6961,6 +6963,7 @@
        "      <td>1</td>\n",
        "      <td>cellular</td>\n",
        "      <td>aug</td>\n",
+       "      <td>fri</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
@@ -6975,35 +6978,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  age job  marital  education  default  housing  loan   contact  \\\n",
-       "0           0   44   2        1          5        2        1     1  cellular   \n",
-       "1           1   53   3        1          7        1        2     1  cellular   \n",
-       "2           2   28   5        2          1        1        1     1  cellular   \n",
-       "3           3   39   4        1          2        1        2     1  cellular   \n",
-       "4           4   55   6        1          5        1        1     1  cellular   \n",
+       "   age job  marital  education  default  housing  loan   contact month  \\\n",
+       "0   44   2        1          5        2        1     1  cellular   aug   \n",
+       "1   53   3        1          7        1        2     1  cellular   nov   \n",
+       "2   28   5        2          1        1        1     1  cellular   jun   \n",
+       "3   39   4        1          2        1        2     1  cellular   apr   \n",
+       "4   55   6        1          5        1        1     1  cellular   aug   \n",
        "\n",
-       "  month ... campaign  pdays  previous  poutcome  emp_var_rate  cons_price_idx  \\\n",
-       "0   aug ...        1    999         0         1           1.4          93.444   \n",
-       "1   nov ...        1    999         0         1          -0.1          93.200   \n",
-       "2   jun ...        3      6         2         3          -1.7          94.055   \n",
-       "3   apr ...        2    999         0         1          -1.8          93.075   \n",
-       "4   aug ...        1      3         1         3          -2.9          92.201   \n",
+       "  day_of_week ...  campaign  pdays  previous  poutcome  emp_var_rate  \\\n",
+       "0         thu ...         1    999         0         1           1.4   \n",
+       "1         fri ...         1    999         0         1          -0.1   \n",
+       "2         thu ...         3      6         2         3          -1.7   \n",
+       "3         fri ...         2    999         0         1          -1.8   \n",
+       "4         fri ...         1      3         1         3          -2.9   \n",
        "\n",
-       "   cons_conf_idx  euribor3m  nr_employed  y  \n",
-       "0          -36.1      4.963       5228.1  0  \n",
-       "1          -42.0      4.021       5195.8  0  \n",
-       "2          -39.8      0.729       4991.6  1  \n",
-       "3          -47.1      1.405       5099.1  0  \n",
-       "4          -31.4      0.869       5076.2  1  \n",
+       "   cons_price_idx  cons_conf_idx  euribor3m  nr_employed  y  \n",
+       "0          93.444          -36.1      4.963       5228.1  0  \n",
+       "1          93.200          -42.0      4.021       5195.8  0  \n",
+       "2          94.055          -39.8      0.729       4991.6  1  \n",
+       "3          93.075          -47.1      1.405       5099.1  0  \n",
+       "4          92.201          -31.4      0.869       5076.2  1  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
