--- a/notebook_idata_lesson01/test/test2.ipynb
+++ b/notebook_idata_lesson01/test/test2.ipynb
@@ -222,8 +222,13 @@
    "source": [
     "# 读取test_data1.csv\n",
     "df = pd.read_csv(\n",
-    "    \"/Users/li/workspace/jupyter_notebook/notebook_idata_lesson01/test/data/test_data1.csv\"\n",
+    "    \"E:\\\\Workspace\\\\jupyter_notebook\\\\notebook_idata_lesson01\\\\test\\\\data\\\\test_data1.csv\"\n",
     ")\n",
+    "\n",
+    "# mac路径\n",
+    "# df = pd.read_csv(\n",
+    "#     \"/Users/li/workspace/jupyter_notebook/notebook_idata_lesson01/test/data/test_data1.csv\"\n",
+    "# )\n",
     "df[:5]"
    ]
   },
@@ -251,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
