--- a/notebook_idata_lesson01/KNN/Standardization.ipynb
+++ b/notebook_idata_lesson01/KNN/Standardization.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -69,66 +67,15 @@
        "</div>"
       ],
       "text/plain": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Class label</th>\n",
-       "      <th>Alcohol</th>\n",
-       "      <th>Malic acid</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>14.23</td>\n",
-       "      <td>1.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>13.20</td>\n",
-       "      <td>1.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>13.16</td>\n",
-       "      <td>2.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>14.37</td>\n",
-       "      <td>1.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>13.24</td>\n",
-       "      <td>2.59</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "   Class label  Alcohol  Malic acid\n",
+       "0            1    14.23        1.71\n",
+       "1            1    13.20        1.78\n",
+       "2            1    13.16        2.36\n",
+       "3            1    14.37        1.95\n",
+       "4            1    13.24        2.59"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,14 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean after standardization:Alcohol=-0.00,Malic acid=-0.00\nStandard deviation after standardization:Alcohol=1.00,Malic acid=1.00\nMin-value after min-max scaling:Alcohol=0.00,Malic acid=0.00\nMax-value after min-max scaling:Alcohol=1.00,Malic acid=1.00\n"
+      "Mean after standardization:Alcohol=-0.00,Malic acid=-0.00\n",
+      "Standard deviation after standardization:Alcohol=1.00,Malic acid=1.00\n",
+      "Min-value after min-max scaling:Alcohol=0.00,Malic acid=0.00\n",
+      "Max-value after min-max scaling:Alcohol=1.00,Malic acid=1.00\n"
      ]
     }
    ],
@@ -177,15 +127,61 @@
     "print(\"Min-value after min-max scaling:Alcohol={:.2f},Malic acid={:.2f}\".format(df_minmax[:, 0].min(),\n",
     "                                                                                df_minmax[:, 1].min()))\n",
     "print(\"Max-value after min-max scaling:Alcohol={:.2f},Malic acid={:.2f}\".format(df_minmax[:, 0].max(),\n",
-    "                                                                                df_minmax[:, 1].max()))\n"
+    "                                                                                df_minmax[:, 1].max()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.51861254, -0.5622498 ],\n",
+       "       [ 0.24628963, -0.49941338],\n",
+       "       [ 0.19687903,  0.02123125],\n",
+       "       [ 1.69154964, -0.34681064],\n",
+       "       [ 0.29570023,  0.22769377]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_std[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.84210526, 0.1916996 ],\n",
+       "       [0.57105263, 0.2055336 ],\n",
+       "       [0.56052632, 0.3201581 ],\n",
+       "       [0.87894737, 0.23913043],\n",
+       "       [0.58157895, 0.36561265]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_minmax[:5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -274,23 +270,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
