--- a/notebook_idata_lesson01/Logistic-Regression/Logistic-Regression.ipynb
+++ b/notebook_idata_lesson01/Logistic-Regression/Logistic-Regression.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -201,7 +199,7 @@
     "ax.set_ylabel(\"Exam_2 score\")\n",
     "\n",
     "# 可以看到绿色的点和蓝色的点，中间我们可以画一条曲线把二者全部分开，\n",
-    "# 这条曲线我们就可以说它是决策边界，因为是取消，我们可以说决策边界是非线性的\n"
+    "# 这条曲线我们就可以说它是决策边界，因为是曲线，我们可以说决策边界是非线性的\n"
    ]
   },
   {
@@ -279,15 +277,17 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "orig_data.shape= (100, 4)\ncols= 4\nx.shape= (100, 3)\ny.shape= (100, 1)\ntheta.shape= (1, 3)\n"
+      "orig_data.shape= (100, 4)\n",
+      "cols= 4\n",
+      "x.shape= (100, 3)\n",
+      "y.shape= (100, 1)\n",
+      "theta.shape= (1, 3)\n"
      ]
     }
    ],
@@ -313,9 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "$$\n",
     "D(h_\\theta(x), y) = -y\\log(h_\\theta(x)) - (1-y)\\log(1-h_\\theta(x))\n",
@@ -508,7 +506,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Original data - learning rate: 1e-06 - Gradient descent - Stop: 5000 iterations\nTheta: [[-0.00027127  0.00705232  0.00376711]] - Iter: 5000 - Last cost: 0.63 - Duration: 1.16s\n"
+      "***Original data - learning rate: 1e-06 - Gradient descent - Stop: 5000 iterations\n",
+      "Theta: [[-0.00027127  0.00705232  0.00376711]] - Iter: 5000 - Last cost: 0.63 - Duration: 1.16s\n"
      ]
     },
     {
@@ -548,7 +547,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Original data - learning rate: 0.001 - Gradient descent - Stop: costs change < 1e-06\nTheta: [[-5.13364014  0.04771429  0.04072397]] - Iter: 109901 - Last cost: 0.38 - Duration: 25.27s\n"
+      "***Original data - learning rate: 0.001 - Gradient descent - Stop: costs change < 1e-06\n",
+      "Theta: [[-5.13364014  0.04771429  0.04072397]] - Iter: 109901 - Last cost: 0.38 - Duration: 25.27s\n"
      ]
     },
     {
@@ -586,7 +586,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Original data - learning rate: 0.001 - Gradient descent - Stop: gradient norm < 0.05\nTheta: [[-2.37033409  0.02721692  0.01899456]] - Iter: 40045 - Last cost: 0.49 - Duration: 9.13s\n"
+      "***Original data - learning rate: 0.001 - Gradient descent - Stop: gradient norm < 0.05\n",
+      "Theta: [[-2.37033409  0.02721692  0.01899456]] - Iter: 40045 - Last cost: 0.49 - Duration: 9.13s\n"
      ]
     },
     {
@@ -624,7 +625,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Original data - learning rate: 0.001 - Stochastic descent - Stop: 5000 iterations\nTheta: [[-0.37627237  0.10381406 -0.01812946]] - Iter: 5000 - Last cost: 1.64 - Duration: 0.27s\n"
+      "***Original data - learning rate: 0.001 - Stochastic descent - Stop: 5000 iterations\n",
+      "Theta: [[-0.37627237  0.10381406 -0.01812946]] - Iter: 5000 - Last cost: 1.64 - Duration: 0.27s\n"
      ]
     },
     {
@@ -665,7 +667,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Original data - learning rate: 2e-06 - Stochastic descent - Stop: 5000 iterations\nTheta: [[-0.0006212   0.00825462  0.00273518]] - Iter: 5000 - Last cost: 0.63 - Duration: 0.36s\n"
+      "***Original data - learning rate: 2e-06 - Stochastic descent - Stop: 5000 iterations\n",
+      "Theta: [[-0.0006212   0.00825462  0.00273518]] - Iter: 5000 - Last cost: 0.63 - Duration: 0.36s\n"
      ]
     },
     {
@@ -705,7 +708,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Original data - learning rate: 0.001 - Mini-batch (16) descent - Stop: 15000 iterations\nTheta: [[-1.03663388  0.03845783  0.03154076]] - Iter: 15000 - Last cost: 1.12 - Duration: 1.29s\n"
+      "***Original data - learning rate: 0.001 - Mini-batch (16) descent - Stop: 15000 iterations\n",
+      "Theta: [[-1.03663388  0.03845783  0.03154076]] - Iter: 15000 - Last cost: 1.12 - Duration: 1.29s\n"
      ]
     },
     {
@@ -745,7 +749,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Scaled data - learning rate: 0.001 - Gradient descent - Stop: 5000 iterations\nTheta: [[0.3080807  0.86494967 0.77367651]] - Iter: 5000 - Last cost: 0.38 - Duration: 1.07s\n"
+      "***Scaled data - learning rate: 0.001 - Gradient descent - Stop: 5000 iterations\n",
+      "Theta: [[0.3080807  0.86494967 0.77367651]] - Iter: 5000 - Last cost: 0.38 - Duration: 1.07s\n"
      ]
     },
     {
@@ -792,7 +797,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Scaled data - learning rate: 0.001 - Gradient descent - Stop: gradient norm < 0.02\nTheta: [[1.0707921  2.63030842 2.41079787]] - Iter: 59422 - Last cost: 0.22 - Duration: 13.78s\n"
+      "***Scaled data - learning rate: 0.001 - Gradient descent - Stop: gradient norm < 0.02\n",
+      "Theta: [[1.0707921  2.63030842 2.41079787]] - Iter: 59422 - Last cost: 0.22 - Duration: 13.78s\n"
      ]
     },
     {
@@ -830,7 +836,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Scaled data - learning rate: 0.001 - Stochastic descent - Stop: gradient norm < 0.0004\nTheta: [[1.14937133 2.79065732 2.56771044]] - Iter: 72610 - Last cost: 0.22 - Duration: 5.24s\n"
+      "***Scaled data - learning rate: 0.001 - Stochastic descent - Stop: gradient norm < 0.0004\n",
+      "Theta: [[1.14937133 2.79065732 2.56771044]] - Iter: 72610 - Last cost: 0.22 - Duration: 5.24s\n"
      ]
     },
     {
@@ -857,7 +864,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***Scaled data - learning rate: 0.001 - Mini-batch (16) descent - Stop: gradient norm < 0.004\nTheta: [[0.901469   2.27504086 2.06747449]] - Iter: 38119 - Last cost: 0.23 - Duration: 3.80s\n"
+      "***Scaled data - learning rate: 0.001 - Mini-batch (16) descent - Stop: gradient norm < 0.004\n",
+      "Theta: [[0.901469   2.27504086 2.06747449]] - Iter: 38119 - Last cost: 0.23 - Duration: 3.80s\n"
      ]
     },
     {
@@ -932,23 +940,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
